# Checkers

./: CMakeLists.txt  README.md
src/: AI.cpp  AI.h  Board.cpp  Board.h  CMakeLists.txt  main.cpp
